--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "license": "UNLICENSED",
   "scripts": {
     "inspect": "jsinspect -t 30 -i -j --ignore -test.js src",
-    "lint": "eslint --ext .js --ext .jsx src",
-    "sloc": "sloc src -e \\.svg",
+    "lint": "eslint --ext .js src",
+    "sloc": "sloc src",
+    "cover": "NODE_PATH=./src ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha",
     "test": "NODE_PATH=./src mocha",
     "test:watch": "NODE_PATH=./src mocha --watch",
-    "validate": "concurrently --success all --names 'lint,test' --prefix name 'npm run lint' 'npm run test'"
+    "validate": "npm run lint && npm run test"
   },
   "dependencies": {
   },
@@ -25,7 +26,6 @@
     "babel-polyfill": "6.16.0",
     "babel-preset-es2015": "6.18.0",
     "circular-dependency-plugin": "2.0.0",
-    "concurrently": "3.1.0",
     "eslint": "3.11.1",
     "eslint-config-standard": "^6.2.1",
     "eslint-loader": "1.6.1",
@@ -33,7 +33,8 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
     "expect": "1.20.2",
-    "mocha": "3.2.0"
+    "mocha": "3.2.0",
+    "istanbul": "0.4.5"
   },
   "optionalDependencies": {
     "jsinspect": "0.8.0",
