--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "scripts": {
     "inspect": "jsinspect -t 30 -i -j --ignore -test.js src",
     "lint": "eslint --ext .js src",
-    "sloc": "sloc src",
     "cover": "NODE_PATH=./src ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha",
     "test": "NODE_PATH=./src mocha",
     "test:watch": "NODE_PATH=./src mocha --watch",
@@ -22,22 +21,13 @@
   "devDependencies": {
     "babel-core": "6.18.2",
     "babel-eslint": "7.1.1",
-    "babel-plugin-transform-class-properties": "6.19.0",
-    "babel-polyfill": "6.16.0",
     "babel-preset-es2015": "6.18.0",
-    "circular-dependency-plugin": "2.0.0",
-    "eslint": "3.11.1",
-    "eslint-config-standard": "^6.2.1",
     "eslint-loader": "1.6.1",
     "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^2.0.1",
+    "eslint": "3.11.1",
     "expect": "1.20.2",
-    "mocha": "3.2.0",
-    "istanbul": "0.4.5"
-  },
-  "optionalDependencies": {
+    "istanbul": "0.4.5",
     "jsinspect": "0.8.0",
-    "sloc": "0.1.11"
+    "mocha": "3.2.0"
   }
 }
